syntax = "proto3";

package opendut.model.peer.configuration.api;

import "opendut/model/cluster/cluster.proto";
import "opendut/model/peer/configuration/parameter.proto";
import "opendut/model/util/uuid.proto";
import "google/protobuf/timestamp.proto";


// Configuration sent from CARL to Peer
message PeerConfiguration {
  repeated PeerConfigurationParameterExecutor executors = 1;
  repeated PeerConfigurationParameterEthernetBridge ethernet_bridges = 2;
  repeated PeerConfigurationParameterDeviceInterface device_interfaces = 3;
  repeated PeerConfigurationParameterGreInterfaceConfig gre_interfaces = 4;
  repeated PeerConfigurationParameterInterfaceJoinConfig joined_interfaces = 5;
  repeated PeerConfigurationParameterRemotePeerConnectionCheck remote_peer_connection_checks = 6;
  repeated PeerConfigurationParameterCanConnection can_connections = 7;
  repeated PeerConfigurationParameterCanBridge can_bridges = 8;
  repeated PeerConfigurationParameterCanLocalRoute can_local_routes = 9;
  //TODO migrate more parameters
}

message PeerConfigurationParameterExecutor {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.Executor value = 2;
}

message PeerConfigurationParameterEthernetBridge {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.EthernetBridge value = 2;
}

message PeerConfigurationParameterDeviceInterface {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.DeviceInterface value = 2;
}

message PeerConfigurationParameterGreInterfaceConfig {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.GreInterfaceConfig value = 2;
}

message PeerConfigurationParameterInterfaceJoinConfig {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.InterfaceJoinConfig value = 2;
}

message PeerConfigurationParameterRemotePeerConnectionCheck {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.RemotePeerConnectionCheck value = 2;
}

message PeerConfigurationParameterCanConnection {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.CanConnection value = 2;
}

message PeerConfigurationParameterCanBridge {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.CanBridge value = 2;
}

message PeerConfigurationParameterCanLocalRoute {
  PeerConfigurationParameter parameter = 1;
  opendut.model.peer.configuration.parameter.CanLocalRoute value = 2;
}

message PeerConfigurationParameter {
   PeerConfigurationParameterId id = 1;
   repeated PeerConfigurationParameterId dependencies = 2;
   oneof target_state {
     PeerConfigurationParameterStateKindPresent present = 11;
     PeerConfigurationParameterStateKindAbsent absent = 12;
   }
}


// Feedback sent from Peer to CARL, how far it has applied PeerConfiguration
message EdgePeerConfigurationState {
  repeated EdgePeerConfigurationParameterState parameters = 1;
}

message EdgePeerConfigurationParameterState {
  PeerConfigurationParameterId id = 1;
  google.protobuf.Timestamp timestamp = 2;
  // the detected state either when checking or after applying
  oneof detected_state {
    PeerConfigurationParameterStateKindPresent present = 11;
    PeerConfigurationParameterStateKindAbsent absent = 12;
    // the error encountered when trying to apply the parameter
    PeerConfigurationParameterStateKindError error = 13;
  }
}


// Representation in CARL to determine the overall state of a configuration parameter and to show to the user
message PeerConfigurationParameterState {
  PeerConfigurationParameterId id = 1;
  google.protobuf.Timestamp timestamp = 2;

  // ParameterDetectedStateKind
  oneof detected_state {
    // final states
    PeerConfigurationParameterStateKindPresent present = 11;
    PeerConfigurationParameterStateKindAbsent absent = 12;
    // transitional states
    PeerConfigurationParameterStateKindCreating creating = 13;
    PeerConfigurationParameterStateKindRemoving removing = 14;
    // error state
    PeerConfigurationParameterStateKindError error = 15;
  }
}
message PeerConfigurationState {
  repeated PeerConfigurationParameterState parameters = 1;
}

// General messages
message PeerConfigurationParameterId {
  opendut.model.util.Uuid uuid = 1;
}

// States
message PeerConfigurationParameterStateKindPresent {}
message PeerConfigurationParameterStateKindAbsent {}
message PeerConfigurationParameterStateKindCreating {}
message PeerConfigurationParameterStateKindRemoving {}

// Errors
message PeerConfigurationParameterStateKindErrorCreatingFailed {}
message PeerConfigurationParameterStateKindErrorRemovingFailed {}
message PeerConfigurationParameterStateKindErrorCheckPresentFailed {}
message PeerConfigurationParameterStateKindErrorCheckAbsentFailed {}
message PeerConfigurationParameterStateKindErrorWaitingForDependencies {}

message PeerConfigurationParameterStateKindError {
  oneof kind {
    PeerConfigurationParameterStateKindErrorCreatingFailed creating_failed = 1;
    PeerConfigurationParameterStateKindErrorRemovingFailed removing_failed = 2;
    PeerConfigurationParameterStateKindErrorWaitingForDependencies waiting_for_dependencies = 3;
    PeerConfigurationParameterStateKindErrorCheckPresentFailed check_present_failed = 4;
    PeerConfigurationParameterStateKindErrorCheckAbsentFailed check_absent_failed = 5;
  }
  oneof cause {
    UnclassifiedError unclassified = 20;
    MissingDependenciesError missing_dependencies = 21;
  }
}

message UnclassifiedError {
  string message = 1;
}

message MissingDependenciesError {
  repeated PeerConfigurationParameterId missing_dependencies = 1;
}
